src/test/ui/no-implicit-prelude-nested.stderr
error[E0405]: cannot find trait `Add` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:11:14
   |
LL |         impl Add for Test {}
   |              ^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
LL |         use std::ops::Add;
   |

error[E0405]: cannot find trait `Clone` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:12:14
   |
LL |         impl Clone for Test {}
   |              ^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use std::clone::Clone;
   |
LL |         use std::prelude::v1::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:13:14
   |
LL |         impl Iterator for Test {}
   |              ^^^^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use std::iter::Iterator;
   |
LL |         use std::prelude::v1::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:14:14
   |
LL |         impl ToString for Test {}
   |              ^^^^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use std::prelude::v1::ToString;
   |
LL |         use std::string::ToString;
   |

error[E0405]: cannot find trait `Writer` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:15:14
   |
LL |         impl Writer for Test {}
   |              ^^^^^^ not found in this scope

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:18:13
   |
LL |             drop(2)
   |             ^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use std::mem::drop;
   |
LL |         use std::prelude::v1::drop;
   |

error[E0405]: cannot find trait `Add` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:23:10
   |
LL |     impl Add for Test {}
   |          ^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
LL |     use std::ops::Add;
   |

error[E0405]: cannot find trait `Clone` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:24:10
   |
LL |     impl Clone for Test {}
   |          ^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |     use std::clone::Clone;
   |
LL |     use std::prelude::v1::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:25:10
   |
LL |     impl Iterator for Test {}
   |          ^^^^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |     use std::iter::Iterator;
   |
LL |     use std::prelude::v1::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:26:10
   |
LL |     impl ToString for Test {}
   |          ^^^^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |     use std::prelude::v1::ToString;
   |
LL |     use std::string::ToString;
   |

error[E0405]: cannot find trait `Writer` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:27:10
   |
LL |     impl Writer for Test {}
   |          ^^^^^^ not found in this scope

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:30:9
   |
LL |         drop(2)
   |         ^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |     use std::mem::drop;
   |
LL |     use std::prelude::v1::drop;
   |

error[E0405]: cannot find trait `Add` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:38:14
   |
LL |         impl Add for Test {}
   |              ^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
LL |         use std::ops::Add;
   |

error[E0405]: cannot find trait `Clone` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:39:14
   |
LL |         impl Clone for Test {}
   |              ^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use std::clone::Clone;
   |
LL |         use std::prelude::v1::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:40:14
   |
LL |         impl Iterator for Test {}
   |              ^^^^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use std::iter::Iterator;
   |
LL |         use std::prelude::v1::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:41:14
   |
LL |         impl ToString for Test {}
   |              ^^^^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use std::prelude::v1::ToString;
   |
LL |         use std::string::ToString;
   |

error[E0405]: cannot find trait `Writer` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:42:14
   |
LL |         impl Writer for Test {}
   |              ^^^^^^ not found in this scope

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:45:13
   |
LL |             drop(2)
   |             ^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL |         use std::mem::drop;
   |
LL |         use std::prelude::v1::drop;
   |

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0405, E0425.
For more information about an error, try `rustc --explain E0405`.
